--- a/tp_reseau/TP1/makefile
+++ b/tp_reseau/TP1/makefile
@@ -4,10 +4,10 @@ main: main.o myAlgo.o
 	gcc -o main main.o myAlgo.o
 
 main.o: .FORCE
-	gcc -c main.c -o main.o -Wall
+	gcc -c main.c -o main.o -Wall -g
 
 myAlgo.o: .FORCE
-	gcc -c myAlgo.c -o myAlgo.o -Wall
+	gcc -c myAlgo.c -o myAlgo.o -Wall -g
 
 clean:
 	rm *.o
